tests/baselines/reference/arrayFilter.errors.txt
tests/cases/compiler/arrayFilter.ts(7,12): error TS2345: Argument of type '(x: { name: string; }) => string' is not assignable to parameter of type '(value: { name: string; }, index: number, array: { name: string; }[]) => boolean'.
  Type 'string' is not assignable to type 'boolean'.


==== tests/cases/compiler/arrayFilter.ts (1 errors) ====
    var foo = [
       { name: 'bar' },
       { name: null },
       { name: 'baz' }
    ]
    
    foo.filter(x => x.name); //should accepted all possible types not only boolean!
               ~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: { name: string; }) => string' is not assignable to parameter of type '(value: { name: string; }, index: number, array: { name: string; }[]) => boolean'.
!!! error TS2345:   Type 'string' is not assignable to type 'boolean'.